Fixed problems with the align of the schedule table

--- a/antxetamedia/static/css/tabs.sass
+++ b/antxetamedia/static/css/tabs.sass
@@ -94,7 +94,7 @@
     li
       width: 100%
       border-bottom: .1rem solid black
-      padding: .5rem
+      padding: .7rem
       font-size: 0
       &:last-child
         border: none
@@ -104,16 +104,20 @@
         display: inline-block
         width: 8%
         font-size: 1rem
+        vertical-align: middle
       h1
         font-weight: bold
         text-transform: lowercase
         font-variant: small-caps
         display: inline-block
         width: 30%
+        vertical-align: middle
+        margin: 0
         a
           text-decoration: none
       p
         display: inline-block
         width: 62%
         color: $green
-        vertical-align: top
+        vertical-align: middle
+        margin: 0
